# crypto-multi-debater

./: .env.example  .gitattributes  .gitignore  AUDIT_DAY1.md  README.md  pyproject.toml  run_daily.sh
.github/scripts/: update_readme_badge.py
.github/workflows/: ci.yml  daily-run.yml
config/: defaults.yaml  sources.yaml
docs/daily/2026-04-26/: BTC_arbiter.md  BTC_card.md  BTC_features.json
docs/daily/2026-04-27/: BTC_arbiter.md  BTC_card.md  BTC_features.json
docs/daily/2026-04-28/: BTC_arbiter.json  BTC_arbiter.md  BTC_card.md  BTC_features.json
docs/daily/2026-04-29/: BTC_arbiter.json  BTC_arbiter.md  BTC_card.md  BTC_features.json
docs/demo_cases/: 01-full-multi-debater-btc-report.md  02-prompt-driven-btc-report.md  03-review-loop-example.md  README.md
docs/references/: derivatives-analysis-framework.md
scripts/: format_cast.py
showcase/: README.md
showcase/research_cards/2026-03-26/: BTC_r_20260326T145524Z_BTC.md
showcase/research_cards/2026-04-01/: BTC_r_20260401T031358Z_BTC.md
showcase/research_cards/2026-04-22/: BTC_r_20260422T063929Z_BTC.md
showcase/reviews/pending/: r_20260422T063929Z_BTC.json
showcase/runs/r_20260326T145524Z_BTC/: artifacts.json  provenance.jsonl
src/crypto_research_agent/: __init__.py  cli.py  config.py  schemas.py  scoring.py
tests/: test_analysis_provider.py  test_cli.py  test_config.py  test_data_layer.py  test_evidence_collection.py  test_feature_engineering.py  test_multi_role_analysis.py  test_openbb_integration.py  test_orchestration.py  test_preflight.py  test_review_loop.py  test_scoring.py
(+115 files in other folders)
